# Agentic-retail-data-platform

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows-temp/: ci.yml
docs/: ai_assisted_developement.md  architecture.md  data_source.md  requirements.md
profiling/reports/: business_rule_checks.csv  composite_key_checks.csv  key_checks.csv  orders_nulls.csv  products_nulls.csv  relationship_checks.csv  row_counts.csv
profiling/sql/: 1_row_counts.sql  2_key_check.sql  3_null_check.sql  4_relationship_check.sql  5_business_rule_check.sql
src/retail_pipeline/: database.py  pipeline.py  sql_runner.py
src/retail_pipeline/ingestion/: load_raw.py
src/retail_pipeline/profiling/: run_profiles.py
src/retail_pipeline/transformations/sql/core/: 001_dim_customer.sql  002_dim_product.sql  003_dim_seller.sql  004_dim_date.sql  005_fact_orders.sql  006_fact_order_items.sql  007_fact_payments.sql
src/retail_pipeline/transformations/sql/marts/: 001_daily_sales.sql  002_customer_summary.sql  003_product_performance.sql
src/retail_pipeline/transformations/sql/staging/: 001_customers.sql  (+6 more)
tests/fixtures/: orders.csv
tests/fixtures/olist/: olist_customers_dataset.csv  olist_geolocation_dataset.csv  olist_order_items_dataset.csv  olist_order_payments_dataset.csv  olist_order_reviews_dataset.csv  olist_orders_dataset.csv  olist_products_dataset.csv  olist_sellers_dataset.csv  product_category_name_translation.csv
tests/unit/: test_core.py  test_database.py  test_load.py  test_marts.py  test_pipeline.py  test_staging.py
